AM_CPPFLAGS = -I../include

bin_PROGRAMS = bzworkbench
bzworkbench_SOURCES = \
	BZWBAPI.cpp \
	BZWBPlugins.cpp \
	DrawInfo.cpp \
	MeshFace.cpp \
	OSFile.cpp \
	TextUtils.cpp \
	Transform.cpp \
	commonControls.cpp \
	dialogs/AdvancedOptionsDialog.cpp \
	dialogs/ArcConfigurationDialog.cpp \
	dialogs/BaseConfigurationDialog.cpp \
	dialogs/BoxConfigurationDialog.cpp \
	dialogs/ConeConfigurationDialog.cpp \
	dialogs/ConfigurationMenu.cpp \
	dialogs/DefineEditor.cpp \
	dialogs/DynamicColorConfigurationDialog.cpp \
	dialogs/Fl_Dialog.cpp \
	dialogs/Fl_Error.cpp \
	dialogs/Fl_Tweak.cpp \
	dialogs/GroupConfigurationDialog.cpp \
	dialogs/InfoConfigurationDialog.cpp \
	dialogs/MasterConfigurationDialog.cpp \
	dialogs/MaterialConfigurationDialog.cpp \
	dialogs/MaterialEditor.cpp \
	dialogs/MenuBar.cpp \
	dialogs/PhysicsConfigurationDialog.cpp \
	dialogs/PhysicsEditor.cpp \
	dialogs/PyramidConfigurationDialog.cpp \
	dialogs/RenameDialog.cpp \
	dialogs/SnapSettings.cpp \
	dialogs/SphereConfigurationDialog.cpp \
	dialogs/TeleporterConfigurationDialog.cpp \
	dialogs/TextureMatrixConfigurationDialog.cpp \
	dialogs/WeaponConfigurationDialog.cpp \
	dialogs/WorldOptionsDialog.cpp \
	dialogs/ZoneConfigurationDialog.cpp \
	main.cpp \
	model/BZWParser.cpp \
	model/Model.cpp \
	model/Primitives.cpp \
	model/SceneBuilder.cpp \
	objects/arc.cpp \
	objects/base.cpp \
	objects/box.cpp \
	objects/bz2object.cpp \
	objects/cone.cpp \
	objects/define.cpp \
	objects/dynamicColor.cpp \
	objects/group.cpp \
	objects/info.cpp \
	objects/link.cpp \
	objects/material.cpp \
	objects/mesh.cpp \
	objects/options.cpp \
	objects/physics.cpp \
	objects/pyramid.cpp \
	objects/sphere.cpp \
	objects/teleporter.cpp \
	objects/tetra.cpp \
	objects/texturematrix.cpp \
	objects/waterLevel.cpp \
	objects/weapon.cpp \
	objects/world.cpp \
	objects/zone.cpp \
	render/GeometryExtractorVisitor.cpp \
	render/Ground.cpp \
	render/Selection.cpp \
	render/TextureRepeaterVisitor.cpp \
	widgets/ColorCommandWidget.cpp \
	widgets/Console.cpp \
	widgets/Fl_ImageButton.cpp \
	widgets/MaterialWidget.cpp \
	widgets/Point3DWidget.cpp \
	widgets/QuickLabel.cpp \
	widgets/RGBAWidget.cpp \
	widgets/TexcoordWidget.cpp \
	widgets/TransformWidget.cpp \
	windows/ConsoleWindow.cpp \
	windows/EventHandlerCollection.cpp \
	windows/MainWindow.cpp \
	windows/RenderWindow.cpp \
	windows/View.cpp \
	windows/eventHandlers/selectHandler.cpp

MAINTAINERCLEANFILES = Makefile.in
